Make sure container overflows with scroll

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -20,6 +20,9 @@
   padding: 1rem 0 1rem 3rem;
 } // remove when webunversum is updated
 
+.au-c-main-container {
+  height: 100%;
+}
 
 .au-u-border-bottom {
   border-bottom: .1rem solid $au-gray-300;
